--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "pretest": "npm run setup",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test"
+    "test": "react-scripts test",
+    "deploy": "npm run build && gh-pages -d build -b gh-pages"
   },
   "keywords": [
     "coronavirus",
@@ -28,6 +29,7 @@
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
     "dayjs": "^1.8.23",
+    "gh-pages": "^2.0.1",
     "history": "^4.10.1",
     "js-cookie": "^2.2.1",
     "lodash-es": "^4.17.15",
