--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-helmet": "^5.2.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
     "typography": "^0.16.19"
