--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "dayjs": "^1.8.23",
     "gh-pages": "^2.0.1",
     "history": "^4.10.1",
+    "husky": "^4.2.3",
     "js-cookie": "^2.2.1",
     "lodash-es": "^4.17.15",
     "node-sass": "^4.13.1",
+    "pretty-quick": "^2.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^5.2.1",
@@ -53,5 +55,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
   }
 }
