--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "test:watch": "npm test -- -u --watch",
     "format": "prettier --write \"src/**/*.{js,html,css,scss,json}\"",
     "deploy": "npm run build && gh-pages -d build -b gh-pages"
   },
