--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,8 @@ node_js:
 script:
   - npm install
   - npm run test
-
 deploy:
+  script: npm run build
   provider: pages
   local_dir: build
   skip_cleanup: true
