--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,10 @@ script:
 deploy:
   script: npm run build
   provider: pages
+  local_dir: ./build
   skip_cleanup: true
   keep_history: true
+  verbose: true
   github_token: $GITHUB_TOKEN
   on:
     branch: master
