--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test": "react-scripts test",
     "test:watch": "npm test -- -u --watch",
     "test:coverage": "npm test -- --coverage --watchAll=false --reporters=default --reporters=jest-junit",
-    "format": "prettier --write \"src/**/*.{js,html,css,scss,json}\"",
+    "format": "prettier --write \"src/**/*.{js,html,css,scss,json,svg}\"",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build -b gh-pages"
   },
@@ -30,6 +30,7 @@
   "license": "MIT",
   "devDependencies": {
     "@jabranr-lab/prettier": "^1.1.0",
+    "@prettier/plugin-xml": "^0.7.2",
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
     "dayjs": "^1.8.23",
@@ -38,6 +39,8 @@
     "husky": "^4.2.3",
     "jest-junit": "^10.0.0",
     "js-cookie": "^2.2.1",
+    "lazysizes": "^5.2.0",
+    "lodash": "^4.17.15",
     "lodash-es": "^4.17.15",
     "node-sass": "^4.13.1",
     "pretty-quick": "^2.0.1",
