--- a/public/manifest.json
+++ b/public/manifest.json
@@ -13,6 +13,11 @@
       "type": "image/png"
     },
     {
+      "src": "./apple-touch-icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    },
+    {
       "src": "./favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
