First public release (#76)
* Add ci setup (#56)

* fix unwanted execution of routes

* remove and ignore generated files

* update script

* rename file

* update name

* update ci setup

* Add ci setup (#57)

* fix unwanted execution of routes

* remove and ignore generated files

* update script

* rename file

* update name

* update ci setup

* add redirects for netlify

* Update ci (#59)

* update ci

* update docs

* remove unwanted deps

* add homepage (#60)

* fix typos

* Add data (#64)

resovles #61, #26 

* update field type

* make header sticky only on large screens

* fix for no contacts

* add data

* update copy

* fix links, resolve #63 (#65)

* Revert "fix links, resolve #63 (#65)" (#67)

This reverts commit 04a33fd310900d9a17c927da59662fdc12e1dbfc.

* fix links, resolve #63 (#68)

* add data, resolves #26 (#66)

* update title (#70)

* add helplines (#71)

* add helplines (#72)

* add data (#73)

* update netlify badge

* add keyword meta to search results

* fix typo

* add sitemap

* add data

* fix name overflow

--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "covidonation",
   "version": "1.0.0",
   "description": "List of resources, donations, charities and information on ways to help in Coronavirus (COVID-19) pandemic.",
-  "main": "index.js",
+  "main": "src/index.js",
+  "private": true,
+  "homepage": ".",
   "scripts": {
     "setup": "node setup.js",
     "prestart": "npm run setup",
@@ -14,20 +16,27 @@
     "test:watch": "npm test -- -u --watch",
     "test:coverage": "npm test -- --coverage --watchAll=false --reporters=default --reporters=jest-junit",
     "format": "prettier --write \"src/**/*.{js,html,css,scss,json,svg}\"",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build -b gh-pages",
     "preview": "npm run build && serve -s build"
   },
   "keywords": [
     "coronavirus",
     "covid-19",
     "covid19",
-    "resources"
+    "resources",
+    "donation",
+    "charities",
+    "sars-cov-2"
   ],
   "author": {
     "name": "Jabran Rafique",
     "email": "hello@jabran.me"
   },
+  "contributors": [
+    {
+      "name": "Arslan Mushtaq",
+      "email": "m.arslanmushtaqahmed@gmail.com"
+    }
+  ],
   "license": "MIT",
   "devDependencies": {
     "@jabranr-lab/prettier": "^1.1.0",
@@ -41,7 +50,6 @@
     "jest-junit": "^10.0.0",
     "js-cookie": "^2.2.1",
     "lazysizes": "^5.2.0",
-    "lodash": "^4.17.15",
     "lodash-es": "^4.17.15",
     "node-sass": "^4.13.1",
     "pretty-quick": "^2.0.1",
