--- a/.github/workflows/rebase.yml
+++ b/.github/workflows/rebase.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
-      - uses: ljharb/rebase@master
+      - uses: cirrus-actions/rebase@1.2
         with:
           type: now
           target_branch: 'develop'
