--- a/.travis.yml
+++ b/.travis.yml
@@ -9,13 +9,13 @@ install:
 script:
   - npm run test
 
-before_deploy:
-  - npm run build
-
 notifications:
   email:
     on_success: never
     on_failure: always
+
+before_deploy:
+  - npm run build
 
 deploy:
   provider: pages
@@ -28,3 +28,8 @@ deploy:
   github_token: $GITHUB_TOKEN
   on:
     branch: master
+
+after_deploy:
+  - git branch -a
+  - git fetch --all
+  - git branch -a
