--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,6 @@ notifications:
 
 before_deploy:
   - npm run build
-  - npm version patch -f -m 'Release v%s'
-  - git push origin HEAD:master && git push origin HEAD:master --tags
 
 deploy:
   provider: pages
@@ -32,6 +30,6 @@ deploy:
     branch: master
 
 after_deploy:
-  - git checkout origin/develop -B develop || exit
+  - git checkout origin/develop -B develop
   - git rebase origin/master
   - git push origin develop
