update post deploy

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,3 +28,10 @@ deploy:
   github_token: $GITHUB_TOKEN
   on:
     branch: master
+
+after_deploy:
+  - git fetch origin refs/heads/master:refs/remotes/origin/master
+  - git fetch origin refs/heads/develop:refs/remotes/origin/develop
+  - git checkout origin/develop -B develop
+  - git rebase origin/master
+  - git push origin develop
