--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "test:watch": "npm test -- -u --watch",
     "test:coverage": "npm test -- --coverage --watchAll=false --reporters=default --reporters=jest-junit",
     "format": "prettier --write \"src/**/*.{js,html,css,scss,json,svg}\"",
-    "preview": "npm run build && serve -s build"
+    "preview": "npm run build && serve -s build",
+    "cf:cache:purge": "node ./purge-cf-cache.js"
   },
   "keywords": [
     "coronavirus",
@@ -43,19 +44,20 @@
     "@prettier/plugin-xml": "^0.7.2",
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
-    "dayjs": "^1.8.23",
+    "cloudflare": "^2.7.0",
+    "dayjs": "^1.8.26",
     "gh-pages": "^2.0.1",
     "history": "^4.10.1",
-    "husky": "^4.2.3",
+    "husky": "^4.2.5",
     "jest-junit": "^10.0.0",
     "js-cookie": "^2.2.1",
     "lazysizes": "^5.2.0",
     "lodash-es": "^4.17.15",
-    "node-sass": "^4.13.1",
+    "node-sass": "^4.14.1",
     "pretty-quick": "^2.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-helmet": "^5.2.1",
+    "react-helmet": "^6.0.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
     "serve": "^11.3.0",
