--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,5 @@
-PORT=4000
 HTTPS=true
 PUBLIC_URL=/
 REACT_APP_GTM_ID=GTM-PZ98K48
-REACT_APP_HOSTNAME=https://covidonation.com
+REACT_APP_HOSTNAME=https://jabran.me/covidonation
 REACT_APP_COVID19_API_HOSTNAME=https://api.covid19api.com
