--- a/package.json
+++ b/package.json
@@ -40,28 +40,28 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "@jabranr-lab/prettier": "^1.1.0",
+    "@jabranr-lab/prettier": "^1.2.1",
     "@prettier/plugin-xml": "^0.7.2",
-    "axios": "^0.21.1",
-    "classnames": "^2.2.6",
-    "cloudflare": "^2.7.0",
-    "dayjs": "^1.8.26",
+    "axios": "^0.21.4",
+    "classnames": "^2.3.1",
+    "cloudflare": "^2.9.1",
+    "dayjs": "^1.11.2",
     "gh-pages": "^2.0.1",
     "history": "^4.10.1",
-    "husky": "^4.2.5",
+    "husky": "^4.3.8",
     "jest-junit": "^10.0.0",
     "js-cookie": "^2.2.1",
-    "lazysizes": "^5.2.1",
-    "lodash-es": "^4.17.15",
-    "node-sass": "^4.14.1",
-    "pretty-quick": "^2.0.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-helmet": "^6.0.0",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.4.1",
-    "serve": "^11.3.0",
-    "typography": "^0.16.19"
+    "lazysizes": "^5.3.2",
+    "lodash-es": "^4.17.21",
+    "pretty-quick": "^2.0.2",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "react-helmet": "^6.1.0",
+    "react-router-dom": "^5.3.3",
+    "react-scripts": "^3.4.4",
+    "sass": "^1.52.2",
+    "serve": "^11.3.2",
+    "typography": "^0.16.21"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -83,5 +83,9 @@
     "hooks": {
       "pre-commit": "pretty-quick --staged"
     }
-  }
+  },
+  "volta": {
+    "node": "14.19.3"
+  },
+  "dependencies": {}
 }
