--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,5 +23,12 @@ jobs:
       - run: npm install
       - run: npm test
       - run: npm run build
-      - run: npm run deploy
-      - run: npm run cf:cache:purge
+      - name: Deploy
+        run: |
+          git config --global user.email "hello@jabran.me"
+          git config --global user.name "Jabran Rafique"
+          git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
+          npm run deploy
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_REPOSITORY: ${{ secrets.GITHUB_REPOSITORY }}
